@startuml

skinparam classAttributeIconSize 0

interface EstadoPedido

class Pedido

class PedidoRecebido
class PedidoEmPreparo
class PedidoPronto
class PedidoEntregue

EstadoPedido <|.. PedidoRecebido
EstadoPedido <|.. PedidoEmPreparo
EstadoPedido <|.. PedidoPronto
EstadoPedido <|.. PedidoEntregue

Pedido <|-- EstadoPedido

@enduml